--- a/ulangan2.html
+++ b/ulangan2.html
@@ -63,7 +63,7 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
   </div>
 
   <div class="text-center">
-    <h4>PENILAIAN TENGAH SEMESTER 1 KELAS 6</h4>
+    <h4>PENILAIAN HARIAN KELAS 6/B</h4>
     <p>Tahun Pelajaran 2025</p>
   </div>
 
