--- a/ulangan2.html
+++ b/ulangan2.html
@@ -442,7 +442,7 @@ document.getElementById("btnSubmit").addEventListener("click", function(){
 // === TOGGLE TOKEN ===
 document.getElementById("toggleToken").addEventListener("click",()=>{
   const el=document.getElementById("tokenInput");
-  if(el.type==="password"){ el.type="text"; toggleToken.textContent="🙈"; }
+  if(el.type==="password"){ el.type="text"; toggleToken.textContent="🎭"; }
   else { el.type="password"; toggleToken.textContent="👁"; }
 });
 
