--- a/ulangan2.html
+++ b/ulangan2.html
@@ -169,7 +169,7 @@ img{max-width:100%;height:auto;display:block;margin:10px auto;max-height:300px;o
 let soal = {};
 let currentName = "";
 let currentSubject = "";
-const soalURL = "https://oneon360.github.io/web/ulangan2.json";
+const soalURL = "https://oneon360.github.io/web/soal/ulangan2.json";
 const siswaURL = "https://oneon360.github.io/web/uh/play/nama.json";
 const WEB_APP_URL = "https://cors.ssss.fun/https://script.google.com/macros/s/AKfycbyh4wdcw1iJFqs3bymVrSwTCLCUpvvg00bsA-zA23pVnq5-KwYUN1hrzvWL06HVE3Qp/exec";
 
